# RodeoStat_Demo_Noesis

./: .gitmodules  CMakeLists.txt  README.md
src/: App.xaml  App.xaml.bin.h  App.xaml.cpp  App.xaml.h  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.bin.h  MainWindow.xaml.cpp  MainWindow.xaml.h  NexaHeavy.ttf.bin.h  Resources.xaml  Resources.xaml.bin.h  ViewModel.cpp  ViewModel.h  bin2h.cmake  contestant.h  control.h  graphics.h  main.cpp  rodeostat.cpp  rodeostat.h  score.cpp
src/Libraries/NoesisGui/Data/: ImageAtlas.xaml  Lottie.xaml  Transform3D.xaml
src/Libraries/NoesisGui/Data/Images/Aladin/: aladin.xaml
src/Libraries/NoesisGui/Include/: NoesisLicense.h  NoesisPCH.h
src/Libraries/NoesisGui/Include/NsApp/: Application.h  ApplicationLauncher.h  EmbeddedXamlProvider.h  Find.h  LocExtension.h  MessageBox.h  Window.h
src/Libraries/NoesisGui/Include/NsApp/AndroidDisplay/Src/: AndroidDisplay.h  Gui.AndroidDisplay.cpp
src/Libraries/NoesisGui/Include/NsApp/AppKitDisplay/Src/: AppDelegate.mm  AppKitDisplay.h  AppKitDisplay.mm  WindowDelegate.mm
src/Libraries/NoesisGui/Include/NsApp/ApplicationLauncher/Src/: App.ApplicationLauncher.cpp  DelegateCommand.cpp  NotifyPropertyChangedBase.cpp
src/Libraries/NoesisGui/Include/NsApp/Display/Src/: App.Display.cpp  Audio.h  Audio.mm.cpp  Display.cpp
src/Libraries/NoesisGui/Include/NsApp/EmscriptenDisplay/Src/: Gui.EmscriptenDisplay.cpp
src/Libraries/NoesisGui/Include/NsApp/Interactivity/Src/: App.Interactivity.cpp  AttachableObject.cpp  BackgroundEffectBehavior.cpp  Behavior.cpp  CollectionSortBehavior.cpp  ComparisonCondition.cpp  ComparisonLogic.cpp  ControlStoryboardAction.cpp  GoToStateAction.cpp  KeyTrigger.cpp  LaunchUriOrFileAction.cpp  LoadContentAction.cpp  MoveFocusAction.cpp  PlaySoundAction.cpp  RemoveElementAction.cpp  SetFocusAction.cpp  StoryboardCompletedTrigger.cpp  StringFilterPredicate.cpp  TargetedTriggerAction.cpp  TranslateZoomRotateBehavior.cpp  TriggerBase.Interactivity.cpp
src/Libraries/NoesisGui/Include/NsApp/Launcher/Src/: App.Launcher.cpp  Launcher.cpp
src/Libraries/NoesisGui/Include/NsApp/MediaElement/Src/: MediaElement.cpp  MediaPlayer.cpp
src/Libraries/NoesisGui/Include/NsApp/Providers/Src/: App.Providers.cpp  EmbeddedTextureProvider.cpp  FileSystemWatcher.cpp  FileTextureProvider.cpp  Find.cpp  LocalXamlProvider.cpp
src/Libraries/NoesisGui/Include/NsApp/Rive/Src/: RiveTriggerAction.cpp
src/Libraries/NoesisGui/Include/NsApp/RiveBase/Src/: RiveInput.cpp
src/Libraries/NoesisGui/Include/NsApp/Shaders/Src/: ConicGradient.noesisbrush  ConicGradientBrush.cpp  CrossFadeBrush.cpp  DirectionalBlurEffect.cpp  Monochrome.noesisbrush  MonochromeBrush.cpp  PinchEffect.cpp  PixelateEffect.cpp  Plasma.noesisbrush  SaturationEffect.cpp
src/Libraries/NoesisGui/Include/NsApp/Theme/Data/: Theme-blend.csproj
src/Libraries/NoesisGui/Include/NsApp/Theme/Src/: App.Theme.cpp  ThemeProviders.cpp
src/Libraries/NoesisGui/Include/NsApp/UIKitDisplay/Src/: App.UIKitDisplay.mm
src/Libraries/NoesisGui/Include/NsCore/: Atomic.h  Atomic.inl  BaseComponent.h  BaseObject.h  BaseRefCounted.h  BaseRefCounted.inl  Boxing.inl  BuildSettings.h  CompilerSettings.h  Converter.inl  CpuProfiler.h  CultureInfo.h  Delegate.inl  EnumConverter.h  EnumConverter.inl  Error.h  Hash.inl  HashMap.h  HashMap.inl  HighResTimer.h  HighResTimer.inl  IdOf.h  Init.h  Interface.h  Memory.h  Nullable.h  Nullable.inl  NullableConverter.h  NullableConverter.inl  Package.h  PlatformSettings.h  Reflection.h  ReflectionDeclare.h  ReflectionImplement.h  ReflectionImplementEmpty.h  ReflectionImplementEnum.h  String.h  String.inl  StringFormat.h  StringFwd.h  (+27 more)
src/Libraries/NoesisGui/Include/NsDrawing/: Color.h  Color.inl  CornerRadius.h  CornerRadius.inl  Int32Rect.h  Int32Rect.inl  Point.h  Point.inl  Rect.h  Rect.inl  Size.h  Size.inl  Thickness.h  Thickness.inl
src/Libraries/NoesisGui/Include/NsGui/: Adorner.h  AdornerDecorator.h  AdornerLayer.h  Animatable.h  AnimationTimeline.h  BaseBinding.h  BaseBindingExpression.h  BaseButton.h  BaseCollection.h  BaseDefinition.h  BaseFreezableCollection.h  BaseKeyFrame.h  BaseMultiValueConverter.h  BaseSetter.h  BaseTextBox.h  BaseTrigger.h  BaseUICollection.h  BaseValueConverter.h  Binding.h  BindingExpression.h  BindingListener.h  BitmapImage.h  BitmapSource.h  BlurEffect.h  BooleanAnimationBase.h  BooleanAnimationUsingKeyFrames.h  BooleanKeyFrame.h  BoxedFreezableCollection.inl  Brush.h  BrushShader.h  Brushes.h  CachedFontProvider.h  Clock.h  Collection.h  Collection.inl  CollectionView.h  CollectionViewSource.h  ColorAnimation.h  ColorAnimationBase.h  ColorAnimationUsingKeyFrames.h  (+262 more)
src/Libraries/NoesisGui/Include/NsMath/: AABBox.h  AABBox.inl  Matrix.h  Matrix.inl  Transform.h  Transform.inl  Vector.h  Vector.inl
src/Libraries/NoesisGui/Include/NsRender/: RenderDevice.h  RenderTarget.h  Texture.h
src/Libraries/NoesisGui/Src/Projects/ApplicationTutorial/android_arm/: AndroidManifest.xml  Makefile
src/Libraries/NoesisGui/Src/Projects/ApplicationTutorial/android_arm64/: AndroidManifest.xml  Makefile
src/Libraries/NoesisGui/Src/Projects/ApplicationTutorial/android_x86/: Makefile
src/Libraries/NoesisGui/Src/Projects/ApplicationTutorial/android_x86_64/: Makefile
src/Libraries/NoesisGui/Src/Projects/ApplicationTutorial/ios/: info.plist
src/Libraries/NoesisGui/Src/Projects/ApplicationTutorial/macos/: info.plist
src/Libraries/NoesisGui/Src/Projects/BackgroundBlur/android_arm/: AndroidManifest.xml  Makefile
src/Libraries/SFML/include/SFML/: SFML.hpp
src/Resources/: MainWindow-init.xaml  Resources-init.xaml
src/Resources/Icons/: rs-sm.icns  rs.icns
src/Resources/Icons/AppIcon.appiconset/: Contents.json
src/Resources/Themes/: NoesisTheme.Brushes.DarkRed.xaml  NoesisTheme.Colors.Dark.xaml  NoesisTheme.Fonts.xaml  NoesisTheme.Styles.xaml
src/Resources/Views/: MainWindow-init.xaml  MainWindow.xaml
src/RodeoStat/: clock.cpp  clock.h  contestant.cpp  contestant.h  control.cpp  control.h  graphics.cpp  graphics.h  rodeostat.cpp  rodeostat.h  score.h
test/: CMakeLists.txt  test.cpp
(+326 files in other folders)
